# RQEquilibrium

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
analyses/: misc.ipynb  notebook-for-matrix-games.ipynb  open_spiel.ipynb  testing_paper.ipynb
analyses/.ipynb_checkpoints/: open_spiel-checkpoint.ipynb
data/: open_spiel.csv  open_spigel_games.csv
docs/: index.md
docs/reference/: opt.md  rqe.md
reference/: opt.html  rqe.html
search/: search_index.json
src/: RQE.py  __init__.py  benchmark.py  open_spiel_api.py  opt.py  original_RQE.py
src/rqequilibrium/: __init__.py  open_spiel_api.py  opt.py  rqe.py
