[project]
name = "rqequilibrium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autograd>=1.8.0",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.1",
    "nashpy>=0.0.41",
    "numpy>=2.2.6",
    "open-spiel>=1.6",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.setuptools.packages.find]
where = ["src"]
